Mise en place de l'environnement

--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
     <meta name="description" content="High end seafood New York restaurant. Come on in and try our fine cuisine made by our award-winning chef.">
   </head>
   <body>
-
+    <header class="home-header">
+      <nav class="l-main-nav">
+        <div class="u-container l-main-nav__container">
+          <a href="./index.html" class="l-main-nav__logo">AQUARIUM</a>
+          <button class="l-main-nav__toggle-button">
+            <img src="./assets/logos/hamburger.svg" alt="toggle mobile menu" class="l-main-nav__toggle-logo" width="50" height="50">
+          </button>
+          <ul class="l-main-nav__list">
+            <li><a class="l-main-nav__link" href="./index.html">Home</a></li>
+            <li><a class="l-main-nav__link" href="./menu.html">Menu</a></li>
+            <li><a class="l-main-nav__link" href="./index.html#about">About us</a></li>
+            <li><a class="l-main-nav__link" href="./index.html#reservation">Reservations</a></li>
+            <li><a class="l-main-nav__link" href="./index.html#contact">Contact</a></li>
+          </ul>
+          <div class="l-main-nav__phonenumber">
+            <img src="./assets/logos/call.svg" alt="" class="l-main-nav__phonelogo" width="20" height="20">
+            <span class="l-main-nav__phonedigits">+15062331887</span>
+          </div>
+        </div>
+      </nav>
+    </header>
     
     <script src="scripts/script.js"></script>
   </body>
